[package]
name = "pwned"
version = "0.1.0"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "4.0"
sha-1 = "0.9"
reqwest = { version = "0.10", features = ["blocking"] }
